--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+
 
     <application
         android:allowBackup="true"
@@ -21,7 +23,7 @@
         android:theme="@style/Theme.CapMap"
         tools:targetApi="31">
         <activity
-            android:name=".fragements.profile.personalSettingActivity"
+            android:name=".fragements.profile.ProfileFragment"
             android:exported="false" />
         <activity
             android:name=".Activity.ForgetActivity"
@@ -32,6 +34,12 @@
         <activity
             android:name=".Activity.LoginActivity"
             android:exported="false" />
+        <activity
+            android:name=".fragements.placements.PlacementFragment"
+            android:exported="true" />
+        <activity
+            android:name=".fragements.placements.CompanyDetailsActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
